Guava Javadocs don't recommend Lists.newArrayList or Maps.newHashMap